# CTS-SAT-1-Ground-Station

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python_validation.yml
docs/: AX100_Config_Dump.txt  Getting_Started.md  Repository_Organization.md
gnu_radio/: README.md
gnu_radio/supporting_demo_scripts/: pycsp.py  pycsp_rx.py  pycsp_tx.py  pycsplink.py
gnu_radio/usrp_b210_gnu_radio/: Setup_Guide.md  radio_ax100.py
gnu_radio_usrp_b210/: README.md
mpi_ui/: mpi_telecommand_codes.py  readdata.py  test_file
