[project]
name = "cts1_gs_parent"
version = "0.1.0"
description = "Ground Station documentation and software for CTS-SAT-1 (FrontierSat)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cts1_gs_forwarder",
    "cts1_gs_tool_lib",
    "cts1_gs_database",
    "cts1_gs_dashboard",
    "cts1_ground_support",
    "cts1_telecommand_input"
]

[dependency-groups]
dev = [
    "ruff >= 0.8.1",
    "pytest >= 8.3.4",
    "pyright",
]

[tool.uv.sources]
cts1_gs_forwarder = { workspace = true }
cts1_gs_tool_lib = { workspace = true }
cts1_gs_database = { workspace = true }
cts1_gs_dashboard = { workspace = true }
cts1_ground_support = {workspace = true}
cts1_telecommand_input = {workspace = true}

[tool.uv.workspace]
members = [ "packages/*" ]

[tool.pyright]
typeCheckingMode = "standard"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["ALL", "ANN"]
ignore = [
    "S101", # Allow asserts.
    "D", # Docstring rules are too strict.
    "TD002", "TD003", "FIX002", "COM812",
    "PLR0913" # Disable: "Too many arguments in function definition (more than 5)"
]

[tool.ruff.lint.per-file-ignores]
# Source: https://github.com/astral-sh/ruff/issues/4368
"tests/**/*.py" = [
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR2004", # Magic value used in comparison
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]
